<resources>
    <string name="app_name">ActivityLayouts</string>
    <string name="avatar2">avatar2</string>
    <string name="avatar1">avatar!</string>
    <string name="avatar3">avatar3</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="SignIn">Sign In</string>
    <string name="email">Email or Username</string>
</resources>